--- a/app/views/public/pages/rdv.html.erb
+++ b/app/views/public/pages/rdv.html.erb
@@ -1,5 +1,15 @@
 <%= page_header("Prendre rendez-vous", "Réservez votre créneau en boutique") %>
 
-<div class="d-flex justify-content-center text-center my-4 m-2 overflow-auto" style="max-width: 100%; white-space: nowrap;">
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeIe2wvRCY1ElZmtZeMw6r81SrpesVKqSLDDD9gFWgOWUs_hQ/viewform?embedded=true" width="640" height="2400" frameborder="0" marginheight="0" marginwidth="0">Chargement…</iframe>
+<div class="public-main-content">
+  <div class="container">
+
+    <h3 class="mb-0 text-light text-center">
+        <i class="bi bi-calendar-check public-brand-color me-2"></i>
+        Formulaire de réservation
+    </h3>
+
+    <div class="card-body p-0">
+        <%= render "public/demande_rdv/form", demande_rdv: DemandeRdv.new %>
+    </div>
+  </div>
 </div>
