--- a/app/views/admin/meetings/index.html.erb
+++ b/app/views/admin/meetings/index.html.erb
@@ -25,7 +25,8 @@
     <%# end %>
   <%# end %>
 
-  <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=Europe%2FParis&showPrint=0&showCalendars=0&mode=WEEK&src=Y29udGFjdEBhMXNvaXIuY29t&src=ZnIuZnJlbmNoI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23039BE5&color=%230B8043" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+  <iframe src="<%= google_calendar_embed_url %>" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+
 </div>
 
 
