--- a/app/views/admin/demande_rdvs/_demande_rdv.html.erb
+++ b/app/views/admin/demande_rdvs/_demande_rdv.html.erb
@@ -33,6 +33,14 @@
         <%= field_with_label("Email: ", demande_rdv.email) if demande_rdv.email.present? %>
         <%= field_with_label("Téléphone: ", demande_rdv.telephone) if demande_rdv.telephone.present? %>
         <%= field_with_label("Date RDV: ", demande_rdv.date_rdv.strftime('%d/%m/%Y à %H:%M')) if demande_rdv.date_rdv.present? && demande_rdv.date_rdv.respond_to?(:strftime) %>
+        <% if demande_rdv.type_rdv.present? %>
+          <% type_rdv_label = DemandeRdv::TYPE_RDV.find { |t| t[0] == demande_rdv.type_rdv }&.last || demande_rdv.type_rdv.capitalize %>
+          <%= field_with_label("Type de RDV: ", type_rdv_label) %>
+        <% end %>
+        <%= field_with_label("Nombre de personnes: ", demande_rdv.nombre_personnes) if demande_rdv.nombre_personnes.present? %>
+        <% if demande_rdv.type_rdv.present? %>
+          <%= field_with_label("Durée du RDV: ", demande_rdv.duree_rdv_formatee) %>
+        <% end %>
         <%= field_with_label("Statut: ", demande_rdv.statut) if demande_rdv.statut.present? %>
         <%= field_with_label("Commentaire: ", demande_rdv.commentaire) if demande_rdv.commentaire.present? %>
 
